# EE569-Digital-Image-Processing

./: Readme.md
assignments/HW1/: EE569_hw1_831981929_HanyunZhao_code.txt  EE569_hw1_8831981929_HanyunZhao.md  ~$569_hw1_8831981929_HanyunZhao.docx
assignments/HW1/EE569_hw1_831981929_HanyunZhao_code/: HistogramMani1.cpp  ImgDenoGauss.cpp  NLMcv.cpp  plotHistogram.py
assignments/HW1/EE569_hw1_8831981929_HanyunZhao/: BilateralFilter.cpp  BilinearDemosaicing.cpp  CLAHE.cpp  CLAHE2.cpp  CLAHEcv.cpp  CMakeLists.txt  Flower_B_noise_Histo.txt  Flower_G_noise_Histo.txt  Flower_R_noise_Histo.txt  Flower_gray_noise_Histo.txt  FrostedGlassFilter.cpp  HatCumHistoEnh.txt  HatCumHistoOri.txt  HatHistogram.txt  HistogramMani2.cpp  ImageDeno.cpp  ImgDenoMean.cpp  Makefile  MixNoiseColor.cpp  README.txt  TransferFuncHisto.txt  readraw.cpp  test.cpp
assignments/HW1/EE569_hw1_8831981929_HanyunZhao/output/: Flower_Frosted_5.raw  Flower_Frosted_7.raw  Flower_color_Denoise.raw  Flower_gray_BiFi.raw  Flower_gray_DenoGauss3.raw  Flower_gray_DenoGauss5.raw  Flower_gray_DenoMean3.raw  Flower_gray_DenoMean5.raw  Flower_gray_FroDeno_5.raw  Flower_gray_NLM.raw  Flower_gray_noisy_DenoFro_5.raw  Flower_gray_noisy_Frosted_5.raw  Flower_noisy_Frosted_5.raw  Flower_noisy_Frosted_7.raw  House_output.raw  MethodAEnhanced.raw  MethodBEnhanced.raw  TajCLAHE.raw  TajMani1.raw  TajMani2.raw
assignments/HW2/: EE569_hw2_831981929_HanyunZhao_code.txt  report.md  structure edge flow chart.xmind
assignments/HW2/EE569_hw2_831981929_HanyunZhao_code/: CannyEdgeDetector.cpp  DitheringMatrix.cpp  MBVQ.cpp  Readme.txt  ThresholdEvaluation.mlx  codetransfer.m  readraw.m  readraw2.m
assignments/HW2/EE569_hw2_8831981929_HanyunZhao/: CMakeLists.txt  ErrorDiffusion.cpp  SeparableED.cpp  SobelEdgeDetector.cpp  Thresholding.cpp  fileIO.cpp  fileIO.h
assignments/HW2/EE569_hw2_8831981929_HanyunZhao/Output/: BridgeRandom.raw  Dithering2.raw  Dithering4.raw  Dithering8.raw  FS_Diffusion.raw  JJN_Diffusion.raw  MBVQ.raw  Pig gradient.raw  Pig x Gradient.raw  Pig y Gradient.raw  PigCanny-200-300.raw  PigCanny-300-400.raw  PigEdge10.raw  PigEdge15.raw  PigEdge5.raw  SeparableED.raw  Stucki_Diffusion.raw  Tiger x Gradient.raw  TigerCanny-100-200.raw  TigerCanny-15-35.raw  TigerCanny-180-200.raw  TigerCanny-180-300.raw  TigerCanny-25-35.raw  TigerCanny-250-300.raw  TigerEdge10.raw  TigerEdge15.raw  y Gradient.raw
assignments/HW3/: CMakeLists.txt  report.md  warpingMatrix.nb  warpingMatrixbottom.nb  warpingMatrixleft.nb  warpingMatrixright.nb  warpingMatrixtop.nb
assignments/HW3/EE569_hw3_831981929_HanyunZhao/: CMakeLists.txt  defect.cpp  stitching.cpp  warping.cpp
assignments/HW3/EE569_hw3_831981929_HanyunZhao/Output/: Inverse22.raw  InverseForky.raw  beantest.raw  binarize.raw  lefttest.raw  repairedDeer.raw  thinFlower.raw  thinflowerInter.raw  thinjar.raw  thinjarInter.raw  thinspring.raw  thinspringInter.raw  warpped22.raw  warppedForky.raw
assignments/HW4/: EE569 HW4.md  HW4 criterion.md  code.txt
assignments/HW4/EE569_zhaohanyun_HW4/: CMakeLists.txt  color.txt  mySIFT.mlx  readraw.m  换行符.docx
assignments/HW4/EE569_zhaohanyun_HW4/Output/: TexSeg.raw  TexSeg35.raw
assignments/HW4/EE569_zhaohanyun_HW4/py part/: 3Dplot.py  SVM.py  TexSeg.py  color35.txt
assignments/HW5/: ConfusionMatrix.py  EE569CIFAR10_CNN.pth  EE569FashionMNIST_CNN.pth  EE569HW5code.txt  EE569MNIST_CNN.pth  NoisyData.py  README.txt  myClassifierCIFAR10.py  myClassifierFashionMNIST.py  myClassifierMNIST.py  report.md  sample_MNIST.py  test.py
assignments/HW6/: EE569HW6.md  EE569HW6_2c.ipynb  EE569HW6code.txt  EE569_2a(1)(2).ipynb  EE569_2a(3).ipynb  EE569_2a(3)FM.ipynb  EE569_2b.ipynb  main.py
reports/: Readme.md
(+62 files in other folders)
